add gutter to carousel

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,10 +56,12 @@
   --font-family-fixed: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
   /* REDESIGN */
+
+  /* Sizings */
   --border-radius: 8px;
   --section-padding: 40px 0;
   --section-div-padding: 24px 16px;
-  --background-color: var(--c-white);
+  --carousel-gap: 8px;
 
   /* Form styles */
   --input-padding: 16px;
@@ -182,6 +184,7 @@
   --c-warning-yellow: #ffa000;
 
   /* Global colors */
+  --background-color: var(--c-white);
   --border-subtle: var(--c-grey-200);
   --border-strong: var(--c-grey-400);
   --border-hover: var(--c-cta-blue-hover);
@@ -1636,6 +1639,10 @@ main.blue-contract .section.section-with-title p {
 }
 
 @media (min-width: 744px) {
+  :root {
+    --carousel-gap: 20px;
+  }
+
   :root.redesign-v2 {
     --section-padding: 40px 0 56px;
     --section-div-padding: 24px 32px;
