--- a/blocks/v2-tabbed-carousel/v2-tabbed-carousel.css
+++ b/blocks/v2-tabbed-carousel/v2-tabbed-carousel.css
@@ -14,6 +14,7 @@
   align-items: flex-start;
   display: flex;
   flex-flow: row nowrap;
+  gap: var(--carousel-gap);
   margin: 0;
   overflow: scroll hidden;
   padding-left: 0;
