--- a/blocks/engine-specifications/engine-specifications.css
+++ b/blocks/engine-specifications/engine-specifications.css
@@ -423,9 +423,8 @@ main .section .engine-specifications-wrapper {
   font-size: var(--f-body-font-size);
 }
 
-/* stylelint-disable-next-line no-descending-specificity */
-.redesign-v2 .performance a,
-.redesign-v2 .performance a:visited {
+.redesign-v2 .performance .engine-rating .rating-item a,
+.redesign-v2 .performance .engine-rating .rating-item a:visited {
   text-decoration: none;
   cursor: pointer;
   padding-bottom: 12px;
