--- a/blocks/v2-stories-carousel/v2-stories-carousel.css
+++ b/blocks/v2-stories-carousel/v2-stories-carousel.css
@@ -172,9 +172,8 @@ ul.v2-stories-carousel-meta {
   outline-offset: 1px;
 }
 
-/* stylelint-disable-next-line no-descending-specificity */
 .v2-stories-carousel:hover .v2-stories-carousel-arrowcontrols button,
-.v2-stories-carousel-arrowcontrols button:focus-visible,
+.v2-stories-carousel-arrowcontrols button:focus-visible, /* stylelint-disable-line no-descending-specificity */
 .v2-stories-carousel-arrowcontrols:focus-within button {
   opacity: 1;
 }
