--- a/blocks/v2-article-cards/v2-article-cards.css
+++ b/blocks/v2-article-cards/v2-article-cards.css
@@ -64,6 +64,20 @@
   padding: 8px 12px 8px 0;
 }
 
+.v2-article-cards--dynamic-articles .v2-article-cards__texts-wrapper .v2-article-cards__card-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 8px;
+}
+
+.v2-article-cards--dynamic-articles .v2-article-cards__texts-wrapper .v2-article-cards__card-button::after {
+  content: url('../../icons/arrow-right.svg');
+  height: 24px;
+  width: 24px;
+}
+
 @media (min-width: 744px) {
   .v2-article-cards-wrapper {
     --section-div-padding: 24px 32px
