--- a/blocks/v2-stories-carousel/v2-stories-carousel.css
+++ b/blocks/v2-stories-carousel/v2-stories-carousel.css
@@ -53,7 +53,7 @@ body .section.v2-stories-carousel-container .v2-stories-carousel-wrapper {
   flex: 0 0 calc(100% - var(--stories-carousel-img-width)/2);
 }
 
-.v2-stories-carousel-item img {
+.v2-stories-carousel-item picture img {
   display: block;
   height: var(--stories-carousel-img-height);
   object-fit: cover;
@@ -68,7 +68,8 @@ body .section.v2-stories-carousel-container .v2-stories-carousel-wrapper {
   letter-spacing: var(--f-body-letter-spacing);
   line-height: var(--f-body-line-height);
   opacity: 0;
-  padding: 30px;
+  padding-bottom: 24px;
+  padding-top: 24px;
   pointer-events: none;
   text-align: center;
   text-wrap: balance;
@@ -86,27 +87,44 @@ body .section.v2-stories-carousel-container .v2-stories-carousel-wrapper {
   font-family: var(--font-family-body);
   font-size: var(--f-heading-5-font-size);
   line-height: var(--f-heading-5-line-height);
+  display: -webkit-box;
+  line-clamp: 1;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: calc(2 * var(--f-heading-5-font-siz) * var(--f-heading-5-line-height));
 }
 
 .v2-stories-carousel-text p {
-  margin: 16px 0 0;
+  margin: 0;
+  display: -webkit-box;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: calc(2 * var(--f-body-font-size) * var(--f-body-line-height));
 }
 
 ul.v2-stories-carousel-meta {
+  color: var(--c-grey-4);
   display: flex;
-  font-size: var(--f-caption-font-size);
+  font-size: var(--f-body-font-size);
   justify-content: center;
-  letter-spacing: var(--f-caption-letter-spacing);
-  line-height: var(--f-caption-line-height);
-  margin: 25px 0 0;
-  opacity: 0.6;
+  letter-spacing: var(--f-body-letter-spacing);
+  line-height: var(--f-body-line-height);
+  margin: 16px 0 0;
 }
 
 .v2-stories-carousel-meta li {
   place-items: center center;
   display: flex;
   gap: 4px;
-  margin: 0 8px;
+}
+
+.v2-stories-carousel-meta .v2-stories-carousel-date {
+  margin-right: 16px;
 }
 
 .v2-stories-carousel-meta li.v2-stories-carousel-author {
@@ -121,62 +139,14 @@ ul.v2-stories-carousel-meta {
   margin-top: 16px;
 }
 
+.v2-stories-carousel-cta .icon {
+  height: 24px;
+  width: 24px;
+}
+
 /* Arrow controls */
 .v2-stories-carousel-arrowcontrols {
   display: none;
-  margin: 0;
-}
-
-.v2-stories-carousel-arrowcontrols li {
-  align-items: center;
-  display: flex;
-  height: var(--stories-carousel-img-height);
-  left: 10%;
-  position: absolute;
-  top: 0;
-}
-
-.v2-stories-carousel-arrowcontrols li:last-child {
-  left: auto;
-  right: 10%;
-}
-
-.v2-stories-carousel-arrowcontrols button {
-  background-color: var(--c-white);
-  border-radius: 50%;
-  border: 1px solid var(--c-grey-400);
-  color: var(--c-main-black);
-  font-size: 0;
-  line-height: 0;
-  margin: 0;
-  padding: 12px;
-  position: relative;
-  opacity: 0;
-  transition: opacity var(--duration-small) var(--easing-standard);
-}
-
-.v2-stories-carousel-arrowcontrols button:hover {
-  background-color: var(--c-grey-50);
-}
-
-.v2-stories-carousel-arrowcontrols button:active {
-  background-color: var(--c-grey-100);
-}
-
-.v2-stories-carousel-arrowcontrols button:focus {
-  outline: 0;
-}
-
-.v2-stories-carousel-arrowcontrols button:focus-visible {
-  outline: 2px solid var(--border-focus);
-  outline-offset: 1px;
-}
-
-/* stylelint-disable-next-line no-descending-specificity */
-.v2-stories-carousel:hover .v2-stories-carousel-arrowcontrols button,
-.v2-stories-carousel-arrowcontrols button:focus-visible,
-.v2-stories-carousel-arrowcontrols:focus-within button {
-  opacity: 1;
 }
 
 @media screen and (min-width: 744px) {
@@ -200,17 +170,20 @@ ul.v2-stories-carousel-meta {
     flex-basis: calc(50% - var(--stories-carousel-img-width)/2);
   }
 
+  .v2-stories-carousel-text {
+    margin: 0 auto;
+    max-width: 419px;
+    padding: 32px 0;
+  }
+
   .v2-stories-carousel-text h3 {
     font-size: var(--f-heading-4-font-size);
     letter-spacing: var(--f-heading-4-letter-spacing);
     line-height: var(--f-heading-4-line-height);
   }
 
-  .v2-stories-carousel-meta {
-    font-size: var(--f-body-font-size);
-    letter-spacing: var(--f-body-letter-spacing);
-    line-height: var(--f-body-line-height);
-    margin-top: 32px;
+  ul.v2-stories-carousel-meta {
+    margin-top: 24px;
   }
 
   .v2-stories-carousel-meta li.v2-stories-carousel-author {
@@ -226,7 +199,54 @@ ul.v2-stories-carousel-meta {
   }
 
   .v2-stories-carousel-arrowcontrols {
-    display: block;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: calc(var(--stories-carousel-img-height) + 32px);
+    width: 100%;
+    z-index: 1;
+  }
+
+  .v2-stories-carousel-arrowcontrols li {
+    position: relative;
+  }
+
+  .v2-stories-carousel-arrowcontrols li:first-child {
+    left: 32px;
+  }
+  
+  .v2-stories-carousel-arrowcontrols li:last-child {
+    right: 32px;
+  }
+  
+  .v2-stories-carousel-arrowbutton {
+    background-color: transparent;
+    border: 0;
+    color: var(--c-main-black);
+    margin: 0;
+    padding: 0;
+    position: relative;
+  }
+  
+  .v2-stories-carousel-arrowbutton:focus {
+    outline: 0;
+  }
+  
+  .v2-stories-carousel-arrowbutton:focus-visible {
+    outline: 2px solid var(--border-focus);
+    outline-offset: 1px;
+  }
+
+  .v2-stories-carousel-arrowbutton:disabled,
+  .v2-stories-carousel-arrowbutton:disabled:hover {
+    background-color: transparent;
+    filter: opacity(0.2);
+  }
+
+  .v2-stories-carousel-arrowbutton .icon {
+    height: 48px;
+    width: 48px;
   }
 }
 
@@ -241,24 +261,26 @@ ul.v2-stories-carousel-meta {
     margin: auto;
   }
 
-  .v2-stories-carousel::after,
-  .v2-stories-carousel::before {
-    content: '';
-    display: block;
-    height: 100%;
-    width: 30px;
-    position: absolute;
-    top: 0;
-    pointer-events: none;
+  .v2-stories-carousel-text {
+    max-width: 456px;
+  }
+  
+  .v2-stories-carousel-text p,
+  ul.v2-stories-carousel-meta {
+    font-size: var(--f-body-font-size-desktop);
   }
 
-  .v2-stories-carousel::after {
-    background: linear-gradient(90deg, rgb(255 255 255 / 0%) 0%, rgb(255 255 255 / 100%) 100%);
-    right: 0;
+  .v2-stories-carousel-arrowcontrols {
+    justify-content: flex-end;
   }
 
-  .v2-stories-carousel::before {
-    background: linear-gradient(270deg, rgb(255 255 255 / 0%) 0%, rgb(255 255 255 / 100%) 100%);
-    left: 0;
+  .v2-stories-carousel-arrowcontrols li:first-child {
+    left: auto;
+  }
+
+  .v2-stories-carousel-arrowcontrols li:last-child {
+    margin-left: 24px;
+    margin-right: 135px;
+    right: auto;
   }
 }
