Add global script to parse videos

--- a/blocks/v2-resource-gallery/v2-resource-gallery.css
+++ b/blocks/v2-resource-gallery/v2-resource-gallery.css
@@ -157,6 +157,15 @@
   display: flex;
 }
 
+.v2-resource-gallery .video-component {
+  height: auto;
+}
+
+.v2-resource-gallery .video-component .video-play-button {
+  width: 40px;
+  height: 40px;
+}
+
 @media (min-width: 744px) {
   .v2-resource-gallery__heading-wrapper {
     flex-flow: row;
