--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -269,6 +269,7 @@ main > .section.video-container {
     cursor: pointer;
     padding: 0;
     margin: 0;
+    border: 0;
 }
 
 .video-component .video-play-button:hover,
@@ -276,6 +277,7 @@ main > .section.video-container {
     background-color: #fff;
 }
 
+.video-component .video-play-button img,
 .video-component .video-play-button .icon {
     display: block;
     width: 100%;
