--- a/blocks/v2-content-card/v2-content-card.css
+++ b/blocks/v2-content-card/v2-content-card.css
@@ -23,7 +23,6 @@
 }
 
 .v2-content-card__item > article {
-  position: relative;
   width: 100%;
   height: 100%;
   display: grid;
@@ -36,13 +35,24 @@
 }
 
 .v2-content-card__media {
-  object-fit: cover;
+  position: relative;
   width: 100%;
   display: block;
   aspect-ratio: 3/2;
 
   /* Safari needs to have set border-radius explicitly for videos */
   border-radius: var(--border-radius) var(--border-radius) 0 0;
+}
+
+.v2-content-card__item img,
+.v2-content-card__item video {
+  object-fit: cover;
+}
+
+.v2-content-card__media img,
+.v2-content-card__item video {
+  width: 100%;
+  height: 100%;
 }
 
 /* Text styles */
