Ensure full-width display

--- a/blocks/v2-stories-carousel/v2-stories-carousel.css
+++ b/blocks/v2-stories-carousel/v2-stories-carousel.css
@@ -10,6 +10,7 @@ body .section.v2-stories-carousel-container .v2-stories-carousel-wrapper {
   padding-left: 0;
   padding-right: 0;
   width: 100%;
+  max-width: none;
 }
 
 /* End Full width block */
