--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1838,6 +1838,14 @@ main.blue-contract .section.section-with-title p {
   height: 100%;
 }
 
+.truck-configurator #configurator img {
+  max-width: none;
+}
+
+.truck-configurator #configurator form input {
+  border: none;
+}
+
 .truck-configurator header {
   display: none;
 }
